--- a/tcui/src/app/home/home.component.html
+++ b/tcui/src/app/home/home.component.html
@@ -2,22 +2,22 @@
   Go to your tournament:
   <div class="field has-addons">
     <div class="control">
-      <input class="input" type="text" placeholder="Tournament id">
+      <input #tournamentId class="input" type="text" placeholder="Tournament id" (keyup)="onTournamentIdChange($event)">
     </div>
     <div class="control">
-      <a class="button is-info">
-        Search
+      <a class="button is-info" (click)="goToTournament()">
+        Go
       </a>
     </div>
   </div>
   Or create new:
   <div class="field has-addons">
     <div class="control">
-      <input class="input" type="text" placeholder="Tournament name">
+      <input #tournamentName class="input" type="text" placeholder="Tournament name">
     </div>
     <div class="control">
-      <a class="button is-info">
-        Search
+      <a class="button is-info" (click)="createTournament()">
+        Create
       </a>
     </div>
   </div>
