--- a/tcui/src/app/tournament/tournament.component.html
+++ b/tcui/src/app/tournament/tournament.component.html
@@ -1,12 +1,31 @@
-<h1>{{ title$}}</h1>
-<div class="columns">
-  <div class="column">
-    Player A
+<section class="section">
+  <div class="container">
+    <h1>Tournament : {{ selectedTournament.name }}</h1>
+
+    <div class="columns is-mobile">
+      <div class="column">X</div>
+      <div class="column" *ngFor="let player of selectedTournament.players">
+        {{player.name}}
+      </div>
+    </div>
+    <div class="columns is-mobile" *ngFor="let player of selectedTournament.players; let columnIndex = index">
+      <div class="column">{{player.name}}</div>
+      <div class="column" *ngFor="let player of selectedTournament.players; let rowIndex = index">
+        <app-score
+          [idAway]="selectedTournament.players[columnIndex].id"
+          [idHome]="selectedTournament.players[rowIndex].id">
+
+        </app-score>
+      </div>
+    </div>
+
+    <div class="control">
+      <input #playerName class="input" type="text" placeholder="Player name">
+    </div>
+    <div class="control">
+      <a class="button is-info" (click)="addPlayer()">
+        Add player
+      </a>
+    </div>
   </div>
-  <div class="column">
-    Player B
-  </div>
-  <div class="column">
-    Player C
-  </div>
-</div>
+</section>
