added table view (not connected with backend)

--- a/tcui/src/app/tournament/score/score/score.component.html
+++ b/tcui/src/app/tournament/score/score/score.component.html
@@ -1,6 +1,6 @@
 <div class="score">
   <div *ngIf="score; else noScore">
-    {{ score.id }}
+    {{score.homeResult}}:{{score.awayResult}}
   </div>
   <ng-template #noScore>
     <div *ngIf="idAway == idHome;else newScore">
