--- a/tcui/src/app/tournament/table/table.component.html
+++ b/tcui/src/app/tournament/table/table.component.html
@@ -31,7 +31,7 @@
     <tbody>
     <tr *ngFor="let s of stats | async; let i = index">
       <th>{{i}}</th>
-      <td>name</td>
+      <td>{{s.name}}</td>
       <td>{{s.played}}</td>
       <td>{{s.won}}</td>
       <td>{{s.drawn}}</td>
