--- a/tcui/src/app/tournament/tournament.component.html
+++ b/tcui/src/app/tournament/tournament.component.html
@@ -1,22 +1,22 @@
 <section class="section">
   <ng-container *ngIf="selectedTournament">
     <div class="container">
-      <h1 class="title">T{{ selectedTournament.name }}</h1>
+      <h1 class="title">{{ selectedTournament.name }}</h1>
 
 
       <div class="columns is-mobile">
-        <div class="column">X</div>
-        <div class="column" *ngFor="let player of selectedTournament.players">
+        <div class="column player">X</div>
+        <div class="column player" *ngFor="let player of selectedTournament.players">
           {{player.name}}
         </div>
       </div>
       <div class="columns is-mobile" *ngFor="let player of selectedTournament.players; let columnIndex = index">
-        <div class="column">{{player.name}}</div>
+        <div class="column player">{{player.name}}</div>
         <div class="column" *ngFor="let player of selectedTournament.players; let rowIndex = index">
 
           <app-score
-            [idAway]="selectedTournament.players[columnIndex].id"
-            [idHome]="selectedTournament.players[rowIndex].id"
+            [home]="selectedTournament.players[columnIndex]"
+            [away]="selectedTournament.players[rowIndex]"
             [score]="getScore(selectedTournament.players[rowIndex].id, selectedTournament.players[columnIndex].id)">
           </app-score>
         </div>
